# ClaimLens

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
configs/: data_config.yaml  train_config.yaml
notebooks/: modeling.ipynb
src/: cli.py
src/data_pipeline/: __init__.py  data_loader.py  preprocessing.py  splitter.py
src/inference/: main.py
src/inference/core/: model_loader.py  prediction.py
src/inference/routes/: health_route.py  prediction_route.py
src/model/: video_classifer_models.py
src/training/: model_tuning.py  training_pipeline.py  tune_train.py
src/utils/: __init__.py  configs_loader.py  eval_metrics.py  logger.py  make_results.py  path_validate.py  schemas.py
tests/: test_api_routes.py  test_data_pipeline.py
